--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.0.1",
   "description": "Automated Tinder script for gathering Tinder data for research",
   "main": "bundle.js",
+  "module": "index.js",
   "repository": "https://github.com/wasd171/tinder-data.git",
   "author": "Konstantin Nesterov <wasd171@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "rollup": "^0.41.6",
+    "nedb": "^1.8.0",
     "tinder-modern": "^1.0.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-env": "^1.4.0"
+  },
+  "scripts": {
+    "build": "babel index.js --out-file bundle.js"
   }
 }
